--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,15 +1,23 @@
 ---
-title: 'Sample Post'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: '"So, what do you study?"'
+date: 2019-12-30
+permalink: /posts/2019/12/so-what-do-you-study/
 tags:
-  - category1
-  - category2
+  - research
 ---
 
 This is a sample blog post.
 
-Heading level 1
+My current research interests
 ======
-Heading level 2
+Decentralized forms of organizing
 ------
+This stream of research aims to explore how more decentralized forms of organizing are/ will be different from existing forms of organizing when it comes to venture creation, organizational learning, and innovation. As there's no consensus about the definitions of decentralized organizations, my research covers a range of decentralized organizations: Decentralized organizations, Decentralized Autonomous Organizations (DAOs), Decentralized Autonomous Corporations/Companies (DACs)
+
+Innovation and creativity in culinary arts
+------
+This stream of research aims to explore how the new styles/categories of cuisine emerge and evolve through the networks of elite restaurants and chefs. These elite restaurants and chefs are constantly producing innovative and creative dishes and beverages to stay in competition and earn prestige (i.e. Michelin stars).
+
+My theoretical approaches
+======
+My theoretical approaches stem from organizational theory & learning, entrepreneurial & platform ecosystems, and social networks. Also, theories from other disciplines, such as deliberative democracy, collective action, stigma, and anonymity, shape how I approach research questions.
