--- a/_posts/2023-10-23-macaw.md
+++ b/_posts/2023-10-23-macaw.md
@@ -1,8 +1,20 @@
 ---
 title: "Streamlining Academic Writing and Citation Management: The Case for a Markdown-centric Approach to Academic Writing (MaCAW)"
-excerpt: "MaCAW: Streamlining Scholarly Writing and Citations with a Markdown-Centric Approach"
-collection: projects
+excerpt: "Streamlining Scholarly Writing and Citations with a Markdown-Centric Approach"
 date: 2023-10-23
+permalink: /posts/2023/10/macaw/
+tags: 
+  - markdown
+  - tools
+  - marked 2
+  - docdown
+  - Zotero
+  - better bibtex
+  - Zettlr
+  - Obsidian
+  - pandoc
+  - academic writing
+  - citation management
 ---
 
 # Streamlining Academic Writing and Citation Management: The Case for a Markdown-centric Approach to Academic Writing (MaCAW)
