--- a/_posts/2024-03-26-my-gpts.md
+++ b/_posts/2024-03-26-my-gpts.md
@@ -1,8 +1,8 @@
 ---
 title: "My GPTs"
 excerpt: "GPTs that I created for various purposes thoughout my research journey to explore the potential of AI in research."
-collection: projects
 date: 2024-03-26
+permalink: /posts/2024/03/my-gpts/
 ---
 
 # My GPTs
