--- a/_posts/2020-09-30-md-tools.md
+++ b/_posts/2020-09-30-md-tools.md
@@ -1,11 +1,9 @@
 ---
 title: "Tools for Writing in Markdown"
-excerpt: "Editors, Add-ons for Capture and Reference"
-collection: projects
+excerpt: "Markdown Editors, Add-ons for Capture and Reference in markdown"
 date: 2020-09-30
+permalink: /posts/2020/09/md-tools/
 ---
-
-
 
 # Compare Markdown Editors (offline)
 
