--- a/_talks/2023-08-07-aom.md
+++ b/_talks/2023-08-07-aom.md
@@ -3,10 +3,12 @@ title: 'Decentralization: Blockchain Technologies' Impact on Modern Organization
 date: 2023-08-07
 excerpt: "Co-chair: Magnus van Haaren (RSM) & Wenqian Wang (HKBU). Panelist: Ethan Bernstein (HBS), Hanna Halaburda (NYU), Ying-Ying Hsieh (Imperial), Alex Murray (Oregon), Joana Pereira (LUBS), and Jean-Philippe Vergne (UCL)."
 collection: talks
-permalink: /talks/2023-08/aom
+permalink: /talks/2023-08/2023aom
 type: Symposium
 venue: Academy of Management (AOM) Annual Conference 2023
 location: Boston, US
 ---
 
-At the Academy of Management (AOM) Annual Conference 2023 in Boston, I co-chaired the symposium Web3 "**Decentralization: Blockchain Technologies' Impact on Modern Organizational Governance**" with Magnus van Haaren (RSM) and Wenqian Wang (HKBU). Panelists include: Ethan Bernstein (HBS), Hanna Halaburda (NYU), Ying-Ying Hsieh (Imperial), Alex Murray (Oregon), Joana Pereira (LUBS), and Jean-Philippe Vergne (UCL).
+At the Academy of Management (AOM) Annual Conference 2023 in Boston, I co-chaired the symposium Web3 "**Decentralization: Blockchain Technologies' Impact on Modern Organizational Governance**" with Magnus van Haaren (RSM) and Wenqian Wang (HKBU). 
+
+Panelists include: Ethan Bernstein (HBS), Hanna Halaburda (NYU), Ying-Ying Hsieh (Imperial), Alex Murray (Oregon), Joana Pereira (LUBS), and Jean-Philippe Vergne (UCL).
