--- a/_talks/2024-08-13-aom.md
+++ b/_talks/2024-08-13-aom.md
@@ -3,11 +3,13 @@ title: 'Humans and Algorithms in Organizations: Navigating the Intersection of B
 date: 2024-08-13
 excerpt: "Co-chair: Magnus van Haaren (RSM) & Carlos Santana (NTNU). Panelist: Oliver Baumann (SDU), Robert Wayne Gregory(U-M), Hanna Halaburda (NYU Stern), Vivianna Fang He (St. Gallen), and Alex Murray (Oregon)."
 collection: talks
-permalink: /talks/2024-08/aom
+permalink: /talks/2024-08/2024aom
 type: Symposium
 venue: Academy of Management (AOM) Annual Conference 2024
 location: Chicago, US
 ---
 
-At the Academy of Management (AOM) Annual Conference 2024 in Chicago, I will co-chair the symposium Web3 "**Humans and Algorithms in Organizations: Navigating the Intersection of Blockchain and AI**" with Magnus van Haaren (RSM) and Carlos Santana (NTNU). Panelists include: Oliver Baumann (SDU), Robert Wayne Gregory(U-M), Hanna Halaburda (NYU Stern), Vivianna Fang He (St. Gallen), and Alex Murray (Oregon).
+At the Academy of Management (AOM) Annual Conference 2024 in Chicago, I will co-chair the symposium Web3 "**Humans and Algorithms in Organizations: Navigating the Intersection of Blockchain and AI**" with Magnus van Haaren (RSM) and Carlos Santana (NTNU). 
+
+Panelists include: Oliver Baumann (SDU), Robert Wayne Gregory(U-M), Hanna Halaburda (NYU Stern), Vivianna Fang He (St. Gallen), and Alex Murray (Oregon).
 
